fix media query collapsing issue

--- a/style.css
+++ b/style.css
@@ -74,6 +74,75 @@
   
 
 
+  @media  screen and (min-width:420px) and (max-width:800px) {
+
+    body{
+        font-family: 'Roboto', sans-serif;
+    }
+
+    img{height: 120px;}
+
+        
+    *{box-sizing: border-box;
+    margin: 0;}
+    
+
+    .row{width: 100%;
+        margin-top: 0;}
+
+    #steps,
+    #lezioni,  
+    #why.container.grey{
+        padding: 2rem;
+
+    }
+
+    .row h1{
+        font-size: 2.5rem;
+        margin-bottom:4rem;
+    }
+
+    .row h3{
+        margin: .8rem 0;
+    }
+
+
+
+    #steps .row>.left,
+    #steps .row>.central,
+    #steps .row>.right,
+    #why .row>.first,
+    #why .row>.second,
+    #why .row>.third
+     {
+      float: left;
+      width: 30%;
+    }
+
+    #why .row>.first,
+    #why .row>.second,
+    #why .row>.third{
+        margin: 0;
+    }
+
+
+    #why hr {
+        display: none;
+    }
+
+    #steps .row>.central,
+    #why .row>.second{
+        margin: 0 5%;
+    }
+
+
+
+
+
+
+    
+}
+
 
   @media screen and (max-width:420px) 
   { 
@@ -178,72 +247,5 @@
 
   }
 
-@media  screen and (max-width:800px) {
 
-    body{
-        font-family: 'Roboto', sans-serif;
-    }
-
-    img{height: 120px;}
-
-        
-    *{box-sizing: border-box;
-    margin: 0;}
-    
-
-    .row{width: 100%;
-        margin-top: 0;}
-
-    #steps,
-    #lezioni,  
-    #why.container.grey{
-        padding: 2rem;
-
-    }
-
-    .row h1{
-        font-size: 2.5rem;
-        margin-bottom:4rem;
-    }
-
-    .row h3{
-        margin: .8rem 0;
-    }
-
-
-
-    #steps .row>.left,
-    #steps .row>.central,
-    #steps .row>.right,
-    #why .row>.first,
-    #why .row>.second,
-    #why .row>.third
-     {
-      float: left;
-      width: 30%;
-    }
-
-    #why .row>.first,
-    #why .row>.second,
-    #why .row>.third{
-        margin: 0;
-    }
-
-
-    #why hr {
-        display: none;
-    }
-
-    #steps .row>.central,
-    #why .row>.second{
-        margin: 0 5%;
-    }
-
-
-
-
-
-
-    
-}
   
